GGB-2046 fix more contrast ratio
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@56317 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/colors.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/colors.scss
@@ -10,7 +10,7 @@ $carrot-dark: #DB6114;
 // TEAL
 $teal-light: #59DAD9;
 $teal-default: #00A8A8;
-$teal-dark: #008D8D;
+$teal-dark: #008475;
 
 
 $black: #000000;
